--- a/text_extractor_host_manifest.json
+++ b/text_extractor_host_manifest.json
@@ -7,3 +7,183 @@
     "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
   ]
 }
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+
+
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+
+
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+
+
+{
+  "name": "com.youdao.cidian.text_extractor_host",
+  "description": "Youdao Dict Text Extractor Native Messaging API Host For Chrome",
+  "path": "text_extractor_host.exe",
+  "type": "stdio",
+  "allowed_origins": [
+    "chrome-extension://aohddidmgooofkgohkbkaohadkolgejj/"
+  ]
+}
+
